# tmnl-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-FD-HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.json
.claude/agents/: doc-updater.md  protocol-reviewer.md  test-writer.md
.claude/skills/verify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml
.local/: PLAN.md
src/: lib.rs
