[package]
name = "tmnl-protocol"
version = "0.0.3"
edition = "2024"
rust-version = "1.85"
description = "Binary wire protocol between the tmnl terminal and a backing app (e.g. mnml)"
authors = ["Chris McLennan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-mclennan/tmnl-protocol"
homepage = "https://github.com/chris-mclennan/tmnl-protocol"
documentation = "https://docs.rs/tmnl-protocol"
readme = "README.md"
keywords = ["terminal", "protocol", "tui", "ipc", "tmnl"]
categories = ["encoding", "network-programming"]
exclude = [".local/", ".claude/", ".github/"]

[dependencies]
# For SCM_RIGHTS fd-passing (`send_message_with_fd` /
# `read_message_with_fd`) — pty handoff use case, see DESIGN-FD-HANDOFF.md.
# Unix-only; ignored on other platforms (the fd helpers are
# `#[cfg(unix)]` gated).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
